force-app/main/default/objects/Source_Evidence__c/Source_Evidence__c.object-meta.xml
<CustomObject>
    <description>Structured source evidence linked to demographic or market records.</description>
    <label>Source Evidence</label>
    <nameField>
        <displayFormat>SE-{0000}</displayFormat>
        <label>Evidence Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Source Evidence</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>