force-app/main/default/objects/Source_Evidence__c/fields/Demographic_Data__c.field-meta.xml
<CustomField>
    <fullName>Demographic_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Demographic Data</label>
    <referenceTo>Demographic_Data__c</referenceTo>
    <relationshipLabel>Source Evidence</relationshipLabel>
    <relationshipName>Source_Evidence</relationshipName>
    <type>Lookup</type>
</CustomField>