force-app/main/default/objects/Source_Evidence__c/fields/Market_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Market_Analysis__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Market Analysis</label>
    <referenceTo>Market_Analysis__c</referenceTo>
    <relationshipLabel>Source Evidence</relationshipLabel>
    <relationshipName>Market_Source_Evidence</relationshipName>
    <type>Lookup</type>
</CustomField>