force-app/main/default/objects/Source_Evidence__c/fields/Source_Label__c.field-meta.xml
<CustomField>
    <fullName>Source_Label__c</fullName>
    <label>Source Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>