force-app/main/default/objects/Source_Evidence__c/fields/Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Type__c</fullName>
    <label>Source Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>Official Report</fullName>
                <default>true</default>
                <label>Official Report</label>
            </value>
            <value>
                <fullName>Survey</fullName>
            </value>
            <value>
                <fullName>Municipal Estimate</fullName>
            </value>
            <value>
                <fullName>Internal Model</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>